fixed owl carousel overflow-x

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -47,6 +47,7 @@
 }
 
 body {
+	overflow-x: hidden;
   text-align: center;
   font-family: $main-font;
   font-size: $main-font-size;
